landing-zones/app-dev/workloads/compute/aks/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo
  namespace: default
spec:
  replicas: 2                   
  selector:
    matchLabels:
      app: nginx-demo            
  template:
    metadata:
      labels:
        app: nginx-demo
    spec:
      nodeSelector:
        nodepool-type: workload
      containers:
      - name: nginx
        image: nginx:1.27-alpine
        ports:
        - containerPort: 80      
        resources:
          requests:
            cpu: "50m"           
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
