landing-zones/app-dev/workloads/compute/aks/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  namespace: default
spec:
  type: ClusterIP             
  selector:
    app: nginx-demo
  ports:
  - port: 80                   
    targetPort: 80
